--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -215,8 +215,13 @@
   transform: scale(1.1);
 }
 
-/* Project 4 - University Entry System */
+/* Project 4 - Working Hours */
 .project-card:nth-child(4) .project-image img {
+  object-position: center center;
+}
+
+/* Project 5 - University Entry System */
+.project-card:nth-child(5) .project-image img {
   object-position: 85% center;
 }
 
